--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="style.css" rel="stylesheet"/>
-    <title>Document</title>
+    <title>Git rules</title>
 </head>
 <body>
 
